# LearnRust

./: .gitignore  Cargo.toml  README.md
adaptive-chess/: Cargo.toml
adaptive-chess/src/: app.rs  cache.rs  main.rs
adaptive-chess/src/logic/: board_config.rs  fen_parser.rs  mod.rs
adaptive-chess/src/model/: board.rs  piece.rs
adaptive-chess/src/model/board/: board.rs
adaptive-chess/src/model/piece/: piece.rs
advent-of-code-2023/day-02/: Cargo.toml
advent-of-code-2023/day-03/: Cargo.toml
advent-of-code-2023/day-04/: Cargo.toml
advent-of-code-2023/day-05/: Cargo.toml
advent-of-code-2023/day-06/: Cargo.toml
advent-of-code-2023/day-07/: Cargo.toml
advent-of-code-2023/day-08/: Cargo.toml
advent-of-code-2023/day-09/: Cargo.toml
advent-of-code-2023/day-10/: Cargo.toml
advent-of-code-2023/day-11/: Cargo.toml
advent-of-code-2023/day-12/: Cargo.toml
dev-log/: create_new_post.sh
dev-log/post_template/n-post/: post_frontmatter.toml
dev-log/posts/9-post/: post.md  post_frontmatter.toml
dev-log/posts/eighth-post/: post.md  post_frontmatter.toml
dev-log/posts/fifth-post/: post.md  post_frontmatter.toml
dev-log/posts/first-post/: post.md  post_frontmatter.toml
dev-log/posts/fourth-post/: post.md  post_frontmatter.toml
dev-log/src/: lib.rs
dev-log/tailwind/: package-lock.json  package.json
dev-log/templates/: base.html  home.html  post.html
posts/first-post/: post.md  post_frontmatter.toml
src/: main.rs
static/css/: index.css
tailwind/: package.json  tailwind.config.js
templates/: base.html  home.html  post.html
(+12 files in other folders)
