[package]
name = "dev-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.19.1"
actix-web = "4.1.0"
env_logger = "0.10.1"
lazy_static = "1.4.0"
actix-files = "0.6.2"
pulldown-cmark = { version = "0.9.3", default-features = false }
ignore = "0.4.20"
toml = "0.8.8"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

